# rustbcadb

./: .gitignore  README.md  pyproject.toml
examples/: data_mat.txt  mat_data.py  run_singlebca.py  runner.py
rustbcadb/: __init__.py  compute_rustbca.py  materials.py  parallel_job_launcher.py
